--- a/articles/objective-c-gnu-linux/objective-c-gnu-linux.tex
+++ b/articles/objective-c-gnu-linux/objective-c-gnu-linux.tex
@@ -8,7 +8,7 @@
 
 \lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
 
-\title{How to compile Objective-C code on GNU/Linux based operating systems}
+\title{How to compile Objective-C code on GNU/Linux based operating systems with GNUstep}
 \author{J\"orn Neumeyer}
 
 \definecolor{darkturquoise}{rgb}{0.0, 0.81, 0.82}
