--- a/slides/password-security/password-security.tex
+++ b/slides/password-security/password-security.tex
@@ -8,22 +8,56 @@
 
 \author{J\"orn Neumeyer}
 
+\setbeamertemplate{section in toc}[sections numbered]
+\setbeamertemplate{subsection in toc}[subsections numbered]
+
+\addtobeamertemplate{navigation symbols}{}{
+  \usebeamerfont{footline}
+  \usebeamercolor[fg]{footline}
+  \hspace{1em}
+  \insertframenumber/\inserttotalframenumber
+}
+
 \AtBeginSection[]
 {
   \begin{frame}
-  \frametitle{Table of Contents}
+  \frametitle{Agenda}
   \tableofcontents[currentsection]
 \end{frame}
 }
 
 \begin{document}
   \frame{\titlepage}
-  \section{foo}
+  \section{Why Passwords?}
   \begin{frame}
-  \frametitle{Hello}
+    \begin{center}
+      \Huge Why Passwords?
+    \end{center}
+  \end{frame}
+  \begin{frame}
+    \frametitle{Why Passwords?}
     \begin{itemize}
-      \item<1-> 1
-      \item<2-> 2
+      \item<1-> Simple to implement
+      \item<2-> Easy for users
     \end{itemize}
+  \end{frame}
+
+  \section{bar}
+  \begin{frame}
+    \frametitle{bar}
+    bar content...
+  \end{frame}
+
+  \begin{frame}
+    \begin{center}
+      \Huge Any Questions?
+    \end{center}
+  \end{frame}
+
+  \begin{frame}
+    \frametitle{Contact}
+    \begin{center}
+      \Large E-Mail: contact@joern-neumeyer.de
+    \end{center}
   \end{frame}
 \end{document}
