continued password security article

--- a/slides/password-security/password-security.tex
+++ b/slides/password-security/password-security.tex
@@ -1,6 +1,7 @@
 \documentclass{beamer}
 
 \usepackage[utf8]{inputenc}
+\usepackage{svg}
 
 \title[Password Security]{Password Security and Good User Practices}
 
@@ -51,6 +52,14 @@
   \begin{frame}
     \begin{center}
       \Huge Any Questions?
+    \end{center}
+  \end{frame}
+
+  \begin{frame}
+    \frametitle{Slides}
+    \begin{center}
+      \Large Download links:\newline
+      \includesvg[]{../../img/by-sa}
     \end{center}
   \end{frame}
 
