updated path to license

--- a/articles/objective-c-gnu-linux/objective-c-gnu-linux.tex
+++ b/articles/objective-c-gnu-linux/objective-c-gnu-linux.tex
@@ -111,7 +111,7 @@
   After enabling script execution - chmod +x build.sh - we can run our build script via ./build.sh and our code compiles successfully via make.
   \section{Copyright}
   Copyright \textcopyright \enspace2019 J\"orn Neumeyer\\
-  Unless specified otherwise, the content of this article is licensed under the \href{https://creativecommons.org/licenses/by-sa/4.0/}{Creative Commons Attribution-ShareAlike 4.0 International Public License}.
+  Unless specified otherwise, the content of this article is licensed under the \href{https://creativecommons.org/licenses/by-sa/4.0/legalcode}{Creative Commons Attribution-ShareAlike 4.0 International Public License}.
   You may modify, copy, distribute, and display this material, but you must give credit to the original authors. Please see the license for details.
   \newpage
   \section{Source File Content}
