commented svg for now

--- a/slides/password-security/password-security.tex
+++ b/slides/password-security/password-security.tex
@@ -59,7 +59,7 @@
     \frametitle{Slides}
     \begin{center}
       \Large Download links:\newline
-      \includesvg[]{../../img/by-sa}
+      % \includesvg[]{../../img/by-sa}
     \end{center}
   \end{frame}
 
